# rust-gb

./: Cargo.toml  README.md
src/: error.rs  main.rs
src/clients/: giantbomb.rs  mod.rs
