[package]
name = "rust-gb"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web= { version= "3", features = ["compress", "openssl", "rustls"] }
rand = "0.8"
serde="1.0"
serde_json = "1.0"
dotenv = "0.15.0"
tracing = { version = "0.1.29", features = ["log"] }
tracing-subscriber = { version = "0.3.1", features = ["registry", "env-filter"]}
tracing-futures = "0.2.5"
tracing-log = "0.1.2"
tracing-bunyan-formatter = "0.3.0"
tracing-actix-web = "0.2.1"
